fix spacing and layout

--- a/style.css
+++ b/style.css
@@ -28,14 +28,17 @@ button:hover {
   background: #4338ca;
 }
 
-
 li {
+  margin: 0 auto;
   margin-top: 10px;
   background: #f8fafc;
+  border: 1.5px solid #e0e7ff;
+  padding: 10px 14px 10px 8px;
   padding: 10px;
   border-radius: 6px;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
 }
 
 li .task-name {
